Going to try and add preact. Stopping here before making a new branch.

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,3 +1,27 @@
+@import 'reset';
+@import 'variables';
+@import 'fonts';
+
 body {
   color: orange;
+}
+
+.main-wrapper {
+  .menu-wrapper {
+    &.off {
+      display: none;
+    }
+  }
+
+  .menu_button-wrapper {
+    position: absolute;
+    bottom: 10px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    .menu-button {}
+  }
+
+  .button-wrapper {}
 }
