--- a/app/scss/_reset.scss
+++ b/app/scss/_reset.scss
@@ -83,8 +83,8 @@ video {
   border: 0;
   font-size: 100%;
   font: inherit;
-  vertical-align: baseline; }
-
+  vertical-align: baseline;
+}
 /* HTML5 display-role reset for older browsers */
 article,
 aside,
@@ -96,51 +96,53 @@ header,
 menu,
 nav,
 section {
-  display: block; }
+  display: block;
+}
 
 body {
-  line-height: 1; }
+  line-height: 1;
+}
 
 ol,
 ul {
-  list-style: none; }
+  list-style: none;
+}
 
 blockquote,
 q {
-  quotes: none; }
+  quotes: none;
+}
 
-blockquote:after, blockquote:before {
-  content: '';
-  content: none; }
+blockquote {
+  &:after,
+  &:before {
+    content: '';
+    content: none;
+  }
+}
 
-q:after, q:before {
-  content: '';
-  content: none; }
+q {
+  &:after,
+  &:before {
+    content: '';
+    content: none;
+  }
+}
 
 table {
   border-collapse: collapse;
-  border-spacing: 0; }
+  border-spacing: 0;
+}
 
 li,
 ol,
 ul {
-  list-style: none; }
+  list-style: none;
+}
 
 button {
   background-color: transparent;
   outline: none;
   border: 0;
-  cursor: pointer; }
-
-body {
-  color: orange; }
-
-.main-wrapper .menu-wrapper.off {
-  display: none; }
-
-.main-wrapper .menu_button-wrapper {
-  position: absolute;
-  bottom: 10px;
-  width: 100%;
-  display: flex;
-  justify-content: center; }
+  cursor: pointer;
+}
