--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -1,9 +1,8 @@
 .header {
-	position: absolute;
-	display: none;
+	position: fixed;
 	left: 0;
 	top: 0;
-	width: 50%;
+	width: 100%;
 	height: 56px;
 	padding: 0;
 	background: #673AB7;
