Added fonts. Added a click listener to the body to change colors.

--- a/src/components/splash/style.scss
+++ b/src/components/splash/style.scss
@@ -8,24 +8,10 @@
 	flex-direction: column;
 	svg {
 		transition: fill .4s ease;
-		fill: orange;
+		fill: black;
+		width: 29.35rem;
 	}
 }
 
-.hi_my_name_is {
-	width: 13rem;
-}
-
-.bill_pearce {
-	width: 30rem;
-}
-
-.and_i_make {
-	width: 14rem;
-  margin-top: 1rem;
-}
-
-.internet_stuff {
-	width: 22rem;
-	margin-top: 2rem;
+.DesktopLayout {
 }
