--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -10,10 +10,6 @@ html, body {
 	background: white;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	cursor: grab;
-	&:active {
-		cursor: grabbing;
-	}
 }
 
 * {
@@ -21,6 +17,33 @@ html, body {
 	user-select: none;
 }
 
+h1 {
+	font-family: 'BrandonGrotesque-Bold';
+	font-size: 67px;
+	text-transform: uppercase;
+}
+
+h2 {
+	color: white;
+	font-family: 'BrandonGrotesque-Regular';
+	font-size: 2.5vw;
+  text-transform: uppercase;
+	letter-spacing: 2vw;
+}
+
+p {
+	font-family: 'Bodoni';
+	font-size: 17px;
+	text-transform: none;
+	letter-spacing: 0;
+}
+
 #app {
 	height: 100%;
+	.screens {
+		.screen {
+			width: 100vw;
+			height: 100vh;
+		}
+	}
 }
