--- a/src/components/screens/splash/style.scss
+++ b/src/components/screens/splash/style.scss
@@ -1,8 +1,7 @@
-.screen {
+.splash {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	position: absolute;
 	width: 100vw;
 	height: 100vh;
 	flex-direction: column;
