--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,2 +1,7 @@
 $paragraphFontStack : 'Bodoni, Times, Serif';
-$headlineFontStack : 'BrandonGrotesque-Bold, Helvetica, Sans Serif'
+$headlineFontStack : 'BrandonGrotesque-Bold, Helvetica, Sans Serif';
+
+$menuInSpeed : 0.65s;
+$menuOutSpeed : 0.65s;
+$contentInSpeed : 0.65s;
+$contentOutSpeed : 0.65s;
