--- a/src/components/screens/about/style.scss
+++ b/src/components/screens/about/style.scss
@@ -1,6 +1,6 @@
 .about {
 	display: flex;
-	justify-content: center;
+	justify-content: flex-start;
 	align-items: center;
 	flex-direction: column;
 	background-color: white;
