--- a/src/components/screens/work/style.scss
+++ b/src/components/screens/work/style.scss
@@ -6,19 +6,17 @@
 	background-color: white;
 	color: black;
 	padding-top: 13vh;
-	:global(.headline-wrapper) {
-		h1 {
-
-		}
+	.taggingWrapper {
+		width: 100%;
+		height: 100%;
 	}
-	:global(.inner_content-wrapper) {
+	.inner_contentWrapper {
 		display: grid;
     grid-template-columns: repeat(5, 1fr);
 		grid-gap: 1px;
     background-color: black;
     border: 1px solid black;
 		margin-top: 70px;
-
 		div {
 	    height: 20vw;
 			width: 20vw;
@@ -26,7 +24,4 @@
 		}
 
 	}
-}
-
-:global(.DesktopLayout) {
 }
