--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -3,5 +3,8 @@ $headlineFontStack : 'BrandonGrotesque-Bold, Helvetica, Sans Serif';
 
 $menuInSpeed : 0.35s;
 $menuOutSpeed : 0.35s;
+$menuEasing : '';
+
 $contentInSpeed : 0.35s;
 $contentOutSpeed : 0.35s;
+$contentEasing : '';
