--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,6 +1,7 @@
 @import 'reset';
 @import 'variables';
 @import 'easings';
+@import 'breakpoints';
 @import 'fonts/BrandonGrotesque-Regular/font';
 @import 'fonts/BrandonGrotesque-Bold/font';
 
