--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -2,8 +2,8 @@
 @import 'variables';
 @import 'easings';
 @import 'breakpoints';
-@import 'fonts/BrandonGrotesque-Regular/font';
-@import 'fonts/BrandonGrotesque-Bold/font';
+@import 'fonts/Brandon-Regular/stylesheet.css';
+@import 'fonts/Brandon-Bold/stylesheet.css';
 
 body,
 html {
@@ -23,33 +23,52 @@ html {
 
 h1 {
 	font-family: 'BrandonGrotesque-Bold';
-	font-size: 67px;
+	font-size: 4rem;
 	text-transform: uppercase;
+	@media (max-width: 599px) {
+		font-size: 2.5rem;
+	}
 }
 
 h2 {
-	color: white;
 	font-family: 'BrandonGrotesque-Regular';
-	font-size: 2.5vw;
+	font-size: 1.25rem;
 	text-transform: uppercase;
-	letter-spacing: 2vw;
+	@media (max-width: 599px) {
+		font-size: 1.1rem;
+	}
 }
 
 p {
 	font-family: 'Bodoni';
-	font-size: 17px;
+	font-size: 1rem;
+	line-height: 1.35rem;
 	text-transform: none;
-	letter-spacing: 0;
+	letter-spacing: 0.03rem;
 }
 
-#app, .screen {
+.bold {
+	font-weight: bold;
+}
+
+.selectable-text {
+	user-select: text;
+}
+
+#app,
+.screen {
 	width: 100vw;
 	min-height: 100vh;
+	position: relative;
+	margin-bottom: 100vh;
+	@media (max-width: 599px) {
+		margin-bottom: 50vh;
+	}
 }
 
 .content-wrapper,
 .menu-wrapper {
-	position: fixed;
+	// position: fixed;
 	z-index: 99;
 }
 
@@ -59,6 +78,7 @@ p {
 		transform: translateX(0%);
 		transition: $menuInSpeed $easeOutCubic;
 	}
+
 	&.content-wrapper {
 		left: 0;
 		transform: translateX(0%);
@@ -72,6 +92,7 @@ p {
 		transform: translateX(-100%);
 		transition: $menuOutSpeed $easeOutCubic;
 	}
+
 	&.content-wrapper {
 		left: 100%;
 		transform: translateX(100%);
@@ -80,23 +101,74 @@ p {
 }
 
 .tags {
-	display: flex;
+	display: inline-block;
+
 	.tag {
+		cursor: pointer;
 		color: white;
 		font-family: 'BrandonGrotesque-Bold';
 		font-size: 12px;
 		text-transform: uppercase;
-	  position: relative;
-	  display: flex;
-	  align-items: center;
-	  justify-content: flex-end;
-		pre {
-			position: absolute;
-			z-index: 2;
-			padding-right: 20px;
+		position: relative;
+		display: inline-flex;
+		align-items: center;
+		justify-content: flex-end;
+		background-color: black;
+		padding: 1vh 1vw;
+		border: 1px solid white;
+
+		div {
+			display: flex;
+			align-items: center;
 		}
-		svg {
-			z-index: 1;
+
+		.xtag {
+			$size: 1vw;
+			@media (max-width: 599px) {
+				$size: 10px;
+			}
+			height: $size;
+			width: $size;
+			position: relative;
+			box-sizing: border-box;
+			line-height: $size;
+			display: inline-block;
+			border: 1px solid white;
+			border-radius: $size;
+			margin-right: 10px;
+			@media (max-width: 599px) {
+				margin-right: 5px;
+			}
+
+			&:after,
+			&:before {
+				$width: $size;
+				$height: 1px;
+				transform: rotate(-45deg);
+				content: '';
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				margin-top: -$height/2;
+				margin-left: -$width/2;
+				display: block;
+				height: $height;
+				width: $width;
+				background-color: #fff;
+				transition: all 0.2s ease-out;
+			}
+
+			&:after {
+				transform: rotate(45deg);
+			}
+		}
+		&:hover {
+			.xtag {
+				&:after,
+				&:before {
+					transform: rotate(0deg);
+				}
+			}
 		}
 	}
 }
