--- a/src/style/_reset.scss
+++ b/src/style/_reset.scss
@@ -179,5 +179,7 @@ input[type="tel"],
 input[type="color"],
 select,
 textarea {
-  font-size: 16px;
+  @media (max-width: 599px) {
+    font-size: 16px;
+  } 
 }
