Added rudimentary parallax functionality to the scroll buttons.

--- a/src/components/splash/style.scss
+++ b/src/components/splash/style.scss
@@ -5,6 +5,9 @@
 	width: 100vw;
 	height: 100vh;
 	flex-direction: column;
+	button {
+		position: relative;
+	}
 	svg {
 		transition: fill .4s ease;
 		fill: black;
