--- a/src/components/splash/style.scss
+++ b/src/components/splash/style.scss
@@ -9,7 +9,7 @@
 		position: relative;
 	}
 	svg {
-		transition: fill .4s ease;
+		transition: fill .4s easeOut;
 		fill: black;
 		width: 25vw;
 		max-width: 300px;
