--- a/src/components/content/style.scss
+++ b/src/components/content/style.scss
@@ -2,14 +2,14 @@
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
-	position: fixed;
+	// position: fixed;
 	width: 100vw;
 	height: auto;
 	flex-direction: column;
 	background-color: black;
 	color: white;
 	margin-bottom: 0;
-	padding-top: 13vh;
+	padding-top: 5vh;
 	overflow-x: hidden;
 	.contentHeader {
 		margin-bottom: 3vh;
@@ -19,7 +19,7 @@
 		flex-direction: row-reverse;
 		// width: 1024px;
 		width: 840px;
-    margin-bottom: 10vh;
+    margin-bottom: 7vh;
 		.flexLeft {
 			width: 33%;
 			padding-left: 20px;
@@ -36,9 +36,26 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		img {
+		div, a, img {
+			flex-shrink: 0;
+			flex-grow: 0;
+		}
+		:global(.contentImageLink) {
+			:global(.contentImage) {
+			}
+			:global(.contentImageTextWrapper) {
+				display: flex;
+				flex-direction: row;
+				justify-content: space-between;
+				align-items: center;
+				p {
+
+				}
+			}
+		}
+		img, video {
 			width: 100%;
-			max-width: 1024px;
+			// max-width: 1024px;
 		}
 	}
 
@@ -65,9 +82,18 @@
 		position: relative;
 		margin: 20px 0 0;
 		color: white;
+		&:hover {
+			:global(.buttonText) {
+				margin: 6px 0 0 0;
+				transition: margin .5s easeOut;
+
+			}
+		}
 		:global(.buttonText) {
 			margin: 3px;
+			transition: margin .5s easeOut;
 		}
+
 		div {
 			border-bottom-color: white;
 		}
