--- a/src/components/work/style.scss
+++ b/src/components/work/style.scss
@@ -5,11 +5,9 @@
 	flex-direction: column;
 	background-color: white;
 	color: black;
-	padding-top: 13vh;
+	padding-top: 5vh;
 
-	@media (max-width: 599px) {
 		margin-bottom: 0;
-	}
 	.taggingWrapper {
 		width: 100%;
 		height: 100%;
@@ -23,16 +21,17 @@
 		display: grid;
     grid-template-columns: repeat(5, 1fr);
 		grid-gap: 1px;
-		margin-top: 70px;
-		div {
+		margin-top: 7vh;
+		:global(.grid-item) {
 	    height: 20vw;
 			width: 20vw;
 			background-color: white;
+			background-size: cover;
 			cursor: pointer;
 		}
 		@media (max-width: 599px) {
 			grid-template-columns: repeat(2, 1fr);
-			div {
+			:global(.grid-item) {
 				height: 50vw;
 				width: 50vw;
 			}
