Found a solution for videos, made sure content is hidden on init. Still need to do more testing on different screens, some minor other stuff, and need to figure out how to get AWS to not host like a moron.

--- a/src/components/content/style.scss
+++ b/src/components/content/style.scss
@@ -20,6 +20,9 @@
 		// width: 1024px;
 		width: 840px;
     margin-bottom: 7vh;
+		@media (max-width: 599px) {
+			margin-bottom: 2vh;
+		}
 		.flexLeft {
 			width: 33%;
 			padding-left: 20px;
@@ -40,16 +43,38 @@
 			flex-shrink: 0;
 			flex-grow: 0;
 		}
+		h3 {
+			margin: 20px 0 10px 0;
+			display: flex;
+			justify-content: center;
+		}
 		:global(.contentImageLink) {
+			position: relative;
+			display: block;
 			:global(.contentImage) {
 			}
-			:global(.contentImageTextWrapper) {
+			:global(.contentInfo) {
+				opacity: 0;
+				background-color: rgba(0, 0, 0, 0.7);
 				display: flex;
-				flex-direction: row;
-				justify-content: space-between;
-				align-items: center;
-				p {
-
+		    position: absolute;
+		    bottom: 0;
+		    justify-content: space-between;
+		    flex-direction: row;
+		    width: 100%;
+				padding: 10px;
+				&:after {
+					content: 'Click to open in new tab';
+					font-family: 'BrandonGrotesque-Regular';
+				  font-weight: 100;
+					font-size: 1rem;
+				  color: white;
+					text-transform: uppercase;
+				}
+			}
+			&:hover {
+				:global(.contentInfo) {
+					opacity: 1;
 				}
 			}
 		}
@@ -84,9 +109,7 @@
 		color: white;
 		&:hover {
 			:global(.buttonText) {
-				margin: 6px 0 0 0;
-				transition: margin .5s easeOut;
-
+				text-decoration: underline;
 			}
 		}
 		:global(.buttonText) {
