Updated thumbnails. Fixed splash animation (removed greensock).

--- a/src/components/splash/style.scss
+++ b/src/components/splash/style.scss
@@ -14,8 +14,26 @@
 		width: 25vw;
 		max-width: 300px;
 		min-width: 200px;
+		max-height: 30px;
 		@media (max-width: 599px) {
 			width: 65vw;
+		}
+	}
+	:global(.ContoursMiddle) {
+		animation: ticker linear infinite;
+	}
+	:global(.squiggleWrapper) {
+		cursor: pointer;
+		width: 25vw;
+		max-width: 300px;
+		min-width: 200px;
+		overflow: hidden;
+		display: flex;
+		justify-content: flex-start;
+		svg {
+			width: 100%;
+			flex-shrink: 0;
+			flex-grow: 0;
 		}
 	}
 }
