--- a/src/style/_animations.scss
+++ b/src/style/_animations.scss
@@ -6,3 +6,14 @@
     transform: translateY(0);
   }
 }
+
+@keyframes ticker {
+  0% {
+    transform: translate3d(0, 0, 0);
+    visibility: visible;
+  }
+
+  100% {
+    transform: translate3d(-100%, 0, 0);
+  }
+}
