--- a/src/components/content/style.scss
+++ b/src/components/content/style.scss
@@ -64,7 +64,7 @@
 		    width: 100%;
 				padding: 10px;
 				&:after {
-					content: 'Click to open in new tab';
+					content: 'Click to open image in new tab';
 					font-family: 'BrandonGrotesque-Regular';
 				  font-weight: 100;
 					font-size: 1rem;
