--- a/src/components/splash/style.scss
+++ b/src/components/splash/style.scss
@@ -18,6 +18,9 @@
 		@media (max-width: 599px) {
 			width: 65vw;
 		}
+		@media (min-width: 600px) and (max-width: 900px) {
+			width: 50vw;
+		}
 	}
 	:global(.splashParallaxWrapper) {
 		display: flex;
