--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -34,8 +34,12 @@ h1 {
 	font-family: 'BrandonGrotesque-Bold';
 	font-size: 4rem;
 	text-transform: uppercase;
+  text-align: center;
 	@media (max-width: 599px) {
 		font-size: 2.5rem;
+	}
+  @media (min-width: 600px) and (max-width: 900px) {
+		font-size: 3.2rem;
 	}
 }
 
@@ -45,6 +49,9 @@ h2 {
 	text-transform: uppercase;
 	@media (max-width: 599px) {
 		font-size: 1rem;
+	}
+  @media (min-width: 600px) and (max-width: 900px) {
+		font-size: 1.1rem;
 	}
 }
 
