--- a/src/components/content/style.scss
+++ b/src/components/content/style.scss
@@ -23,6 +23,17 @@
 		@media (max-width: 599px) {
 			margin-bottom: 2vh;
 		}
+		.flexLeft, .flexRight {
+			div {
+				margin: 15px 0;
+				&:first-of-type {
+					margin-top: 0;
+				}
+				h5 {
+					margin-bottom: 15px;
+				}
+			}
+		}
 		.flexLeft {
 			width: 33%;
 			padding-left: 20px;
