--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -75,6 +75,12 @@ h4 {
 	text-transform: uppercase;
 }
 
+h5 {
+  font-family: BrandonGrotesque-Regular;
+  text-transform: uppercase;
+  font-size: 1.25rem;
+}
+
 p {
 	font-family: 'Bodoni';
 	font-size: 1rem;
